--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,6 +13,23 @@ services:
 
   spark-worker:
     image: bde2020/spark-worker:3.0.1-hadoop3.2
+    ports:
+      - "8081:8081"
+    depends_on:
+      - spark-master
+    environment:
+      - SPARK_MASTER=spark://spark-master:7077
+      - SPARK_WORKER_CORES=1
+      - SPARK_WORKER_MEMORY=2G
+      - SPARK_DRIVER_MEMORY=2G
+      - SPARK_EXECUTOR_MEMORY=2G
+    volumes:
+       - ./work:/home/jovyan/work
+
+  spark-worker1:
+    image: bde2020/spark-worker:3.0.1-hadoop3.2
+    ports:
+      - "8082:8082"
     depends_on:
       - spark-master
     environment:
